<resources>
    <string name="app_name">Photo Jackal</string>
    <string name="selected_image">Selected image</string>
    <string name="compression_level">Compression level</string>
    <string name="resolution">Resolution</string>
    <string name="share">Share</string>
    <string name="share_image">Share image</string>
    <string name="select_image">Select image</string>
    <string name="clear_image">Clear image</string>
    <string name="take_photo">Take photo</string>
    <string name="image_hint">Please select an image or take a photo</string>

    <string name="onboarding1_descr">Here\'s the privacy policy, if you\'re into such kind of things</string>
    <string name="onboarding1_privacy_policy_button">Privacy Policy</string>

    <string name="onboarding2_title">App\'s purpose</string>
    <string name="onboarding2_descr">The whole purpose of this tiny app is to degrade quality of your photos, so that they would take less space (doesn\'t matter, if they would start looking horrible)</string>

    <string name="onboarding3_title">Why does the app look so unpolished?</string>
    <string name="onboarding3_descr">Because I didn\'t polish it! I made it in one weekend for personal use, but then thought that maybe someone else would also find it handy</string>

    <string name="onboarding_next">Forward</string>
    <string name="onboarding_finish">Finish</string>
    <string name="onboarding_back">Back</string>
</resources>