...
            pagerState.animateScrollToPage(pagerState.currentPage + offset)
        }
    }

    Box(Modifier
        .padding(bottom = 32.dp)
        .testTag("onboarding_pages")
    ) {
        Pages(pagerState, openPrivacyPolicy)
    }
    Controls(offsetPage, canMoveBackward, canFinish, finish)
}

...
